fix: update navbar visibility to display only on landing page

--- a/src/app/layouts/navbar/navbar.component.scss
+++ b/src/app/layouts/navbar/navbar.component.scss
@@ -5,12 +5,14 @@ nav{
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', sans-serif;
+
 }
 
 .navbar-container{
     padding: 0.5rem 2rem;
     background-color: #85BE00 !important;
     color: #ffffff;
+    width: 100%;
 
     .container-fluid {
         padding: 0 !important;
